fix: navbar z-index

--- a/index.scss
+++ b/index.scss
@@ -34,6 +34,7 @@ nav {
   border-bottom: 1px solid;
   background-color: #121212;
   border-image: linear-gradient(to right, #ffffff, rgba(255, 255, 255, 0.2)) 1;
+  z-index: 5;
 
   a {
     position: relative;
